haskell-parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function(root) {
  "use strict";

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  peg$SyntaxError.buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
          literal: function(expectation) {
            return "\"" + literalEscape(expectation.text) + "\"";
          },

          "class": function(expectation) {
            var escapedParts = "",
                i;

            for (i = 0; i < expectation.parts.length; i++) {
              escapedParts += expectation.parts[i] instanceof Array
                ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                : classEscape(expectation.parts[i]);
            }

            return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
          },

          any: function(expectation) {
            return "any character";
          },

          end: function(expectation) {
            return "end of input";
          },

          other: function(expectation) {
            return expectation.description;
          }
        };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g,  '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g,  '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = new Array(expected.length),
          i, j;

      for (i = 0; i < expected.length; i++) {
        descriptions[i] = describeExpectation(expected[i]);
      }

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    var peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart, functionDefinitionList: peg$parsefunctionDefinitionList },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = function(functionDefinition) { return functionDefinition; },
        peg$c1 = function(functionName, typeSignature, patterns) { return {
            name: functionName.name,
            englishName: functionName.name,
            typeSignature: typeSignature,
            infix: false,
            patterns: patterns,
            isValidApplication: function(functionArguments) { return functionArguments.length === patterns[0].numberOfArguments;
          }}; },
        peg$c2 = "(",
        peg$c3 = peg$literalExpectation("(", false),
        peg$c4 = ")",
        peg$c5 = peg$literalExpectation(")", false),
        peg$c6 = function(functionName, typeSignature, patterns) { return {
            name : functionName.name,
            englishName: functionName.name,
            typeSignature: typeSignature,
            infix: true,
            patterns: patterns,
            isValidApplication: function(functionArguments) {
                  return (functionArguments.length == 2); }
        	  }; },
        peg$c7 = "::",
        peg$c8 = peg$literalExpectation("::", false),
        peg$c9 = /^[ ()[\]A-Za-z>\-]/,
        peg$c10 = peg$classExpectation([" ", "(", ")", "[", "]", ["A", "Z"], ["a", "z"], ">", "-"], false, false),
        peg$c11 = function(typesig) { return typesig.join(""); },
        peg$c12 = function(part) { return part; },
        peg$c13 = "=",
        peg$c14 = peg$literalExpectation("=", false),
        peg$c15 = function(patternArguments, exp) { return {
            definitionLine: text(),
            numberOfArguments: patternArguments.length,
            doesMatch: function(args) {
              for (var i=0; i<patternArguments.length; i++) {
        	if(patternArguments[i].forceEval(args[i])) return false;
                if(patternArguments[i].doesMatch &&
        	   !patternArguments[i].doesMatch(args[i])) return false;
              }
              return true;
            },
            forceEval: function(args) {
            	       for (var i=0;i<patternArguments.length; i++) {
        	       	if(patternArguments[i].forceEval(args[i])) return true;	       
        	       }
        	       return false;
            },
            apply: function(functionArguments) {
            	   return ASTTransformations.fillInArguments(exp, patternArguments, functionArguments); }
          }; },
        peg$c16 = function(pattern1, pattern2, exp) {
            return {
            definitionLine: text(),
            numberOfArguments: 2,
            doesMatch: function(args) {
            	       if(pattern1.doesMatch && !pattern1.doesMatch(args[0]))
        	       	  return false;
            	       if(pattern2.doesMatch && !pattern2.doesMatch(args[1]))
        	       	  return false;
        	       return true;	 
        	      	},
             forceEval: function(args) {
             		return ((pattern1.forceEval && pattern1.forceEval(args[0])) ||
        		       (pattern2.forceEval && pattern2.forceEval(args[1])));
        		       },
           apply: function(args) {
           	  var patterns = [pattern1, pattern2];
        	  return ASTTransformations.fillInArguments(exp,patterns,args); }
        	  };
          },
        peg$c17 = function(pattern) { return pattern; },
        peg$c18 = "[",
        peg$c19 = peg$literalExpectation("[", false),
        peg$c20 = "]",
        peg$c21 = peg$literalExpectation("]", false),
        peg$c22 = function() { return {id: randomId(), type: "emptyListPattern", doesMatch: function(arg) { return arg.type === "list" && arg.items.length === 0; },
          forceEval: function(arg) { return arg.type !== "list"; }
          }; },
        peg$c23 = ":",
        peg$c24 = peg$literalExpectation(":", false),
        peg$c25 = function(left, right) { return {id: randomId(), type: "listPattern", left: left, right: right, doesMatch: function(arg) { return arg.type === "list" && arg.items.length > 0; },
          forceEval: function(arg) { return arg.type !== "list"; } 
          }; },
        peg$c26 = "True",
        peg$c27 = peg$literalExpectation("True", false),
        peg$c28 = function() { return {id:randomId, type:"booleanPattern", doesMatch: function(arg) { return arg.type==="bool" && arg.value; },
          forceEval: function(arg) { return arg.type !== "bool"; } }; },
        peg$c29 = "False",
        peg$c30 = peg$literalExpectation("False", false),
        peg$c31 = function() { return {id:randomId, type:"booleanPattern", doesMatch: function(arg) { return arg.type==="bool" && !arg.value; },
            forceEval: function(arg) { return arg.type !== "bool"; }
          }; },
        peg$c32 = function(f) { f.forceEval  = function(arg) { return false; }; return f },
        peg$c33 = function(integer) { integer.doesMatch = function(arg) { return arg.type === "int" && arg.value === integer.value; }; integer.forceEval = function(arg) { return arg.type !== "int"; }; return integer; },
        peg$c34 = function(exp) { return exp; },
        peg$c35 = function(f) { return f; },
        peg$c36 = function(f, args) {return {functionName: f, type: 'application', id: randomId(), arguments: args}},
        peg$c37 = function(left, f, right) { return {id: randomId(), functionName: f, type: "application", arguments: [left, right]}},
        peg$c38 = function(exp1, list) { list.unshift(exp1); return list; },
        peg$c39 = function(list) { return { id: randomId(), type: "list", items: list || [] }; },
        peg$c40 = ",",
        peg$c41 = peg$literalExpectation(",", false),
        peg$c42 = /^[A-Za-z]/,
        peg$c43 = peg$classExpectation([["A", "Z"], ["a", "z"]], false, false),
        peg$c44 = function(letters) { return {id: randomId(), type: 'functionName', name: letters.join(""), infix: false}; },
        peg$c45 = "==",
        peg$c46 = peg$literalExpectation("==", false),
        peg$c47 = function() { return {id: randomId(), type: 'functionName', name: "==", infix:true}; },
        peg$c48 = "/=",
        peg$c49 = peg$literalExpectation("/=", false),
        peg$c50 = function() { return {id: randomId(), type: 'functionName', name: "/=", infix:true}; },
        peg$c51 = "++",
        peg$c52 = peg$literalExpectation("++", false),
        peg$c53 = function() { return {id: randomId(), type: 'functionName', name: "++", infix: true}; },
        peg$c54 = "+",
        peg$c55 = peg$literalExpectation("+", false),
        peg$c56 = function() { return {id: randomId(), type: 'functionName', name: '+', infix: true}; },
        peg$c57 = "-",
        peg$c58 = peg$literalExpectation("-", false),
        peg$c59 = function() { return {id: randomId(), type: 'functionName', name: '-', infix: true}; },
        peg$c60 = "*",
        peg$c61 = peg$literalExpectation("*", false),
        peg$c62 = function() { return {id: randomId(), type: 'functionName', name: '*', infix: true}; },
        peg$c63 = function() { return {id: randomId(), type: 'functionName', name: ':', infix: true}; },
        peg$c64 = "`",
        peg$c65 = peg$literalExpectation("`", false),
        peg$c66 = /^[0-9]/,
        peg$c67 = peg$classExpectation([["0", "9"]], false, false),
        peg$c68 = function(digits) { return { id: randomId(), type: "int", value: parseInt(digits.join(""), 10)} ; },
        peg$c69 = function() { return {id: randomId(), type: "bool", value: true}; },
        peg$c70 = function() { return {id: randomId(), type: "bool", value: false}; },
        peg$c71 = " ",
        peg$c72 = peg$literalExpectation(" ", false),
        peg$c73 = /^[ \n]/,
        peg$c74 = peg$classExpectation([" ", "\n"], false, false),

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1 }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos], p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parsestart() {
      var s0;

      s0 = peg$parseexpressionWithFunction();

      return s0;
    }

    function peg$parsefunctionDefinitionList() {
      var s0, s1;

      s0 = [];
      s1 = peg$parsefunctionDefinitionPlusWhitespace();
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        s1 = peg$parsefunctionDefinitionPlusWhitespace();
      }

      return s0;
    }

    function peg$parsefunctionDefinitionPlusWhitespace() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parsefunctionDefinition();
      if (s1 !== peg$FAILED) {
        s2 = peg$parsewhitespace_newline();
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s1);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsefunctionDefinition() {
      var s0;

      s0 = peg$parseprefixFunctionDefinition();
      if (s0 === peg$FAILED) {
        s0 = peg$parseinfixFunctionDefinition();
      }

      return s0;
    }

    function peg$parseprefixFunctionDefinition() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = peg$parsefunctionName();
      if (s1 !== peg$FAILED) {
        s2 = peg$parsefunctionDefinitionTypeSignature();
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parsefunctionDefinitionPatternLine();
          if (s4 !== peg$FAILED) {
            while (s4 !== peg$FAILED) {
              s3.push(s4);
              s4 = peg$parsefunctionDefinitionPatternLine();
            }
          } else {
            s3 = peg$FAILED;
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c1(s1, s2, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseinfixFunctionDefinition() {
      var s0, s1, s2, s3, s4, s5, s6;

      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 40) {
        s1 = peg$c2;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c3); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseinfixFunctionName();
        if (s2 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 41) {
            s3 = peg$c4;
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c5); }
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parsefunctionDefinitionTypeSignature();
            if (s4 !== peg$FAILED) {
              s5 = [];
              s6 = peg$parseinfixFunctionDefinitionPatternLine();
              if (s6 !== peg$FAILED) {
                while (s6 !== peg$FAILED) {
                  s5.push(s6);
                  s6 = peg$parseinfixFunctionDefinitionPatternLine();
                }
              } else {
                s5 = peg$FAILED;
              }
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c6(s2, s4, s5);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsefunctionDefinitionTypeSignature() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parsewhitespace();
      if (s1 === peg$FAILED) {
        s1 = null;
      }
      if (s1 !== peg$FAILED) {
        if (input.substr(peg$currPos, 2) === peg$c7) {
          s2 = peg$c7;
          peg$currPos += 2;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c8); }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parsewhitespace();
          if (s3 === peg$FAILED) {
            s3 = null;
          }
          if (s3 !== peg$FAILED) {
            s4 = [];
            if (peg$c9.test(input.charAt(peg$currPos))) {
              s5 = input.charAt(peg$currPos);
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c10); }
            }
            if (s5 !== peg$FAILED) {
              while (s5 !== peg$FAILED) {
                s4.push(s5);
                if (peg$c9.test(input.charAt(peg$currPos))) {
                  s5 = input.charAt(peg$currPos);
                  peg$currPos++;
                } else {
                  s5 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c10); }
                }
              }
            } else {
              s4 = peg$FAILED;
            }
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c11(s4);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsefunctionDefinitionPatternLine() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parsewhitespace_newline();
      if (s1 !== peg$FAILED) {
        s2 = peg$parsefunctionName();
        if (s2 !== peg$FAILED) {
          s3 = peg$parsefunctionDefinitionPatternPartOfLine();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c12(s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsefunctionDefinitionPatternPartOfLine() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parsepatternWithWhitespace();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parsepatternWithWhitespace();
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parsewhitespace();
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 61) {
            s3 = peg$c13;
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c14); }
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parsewhitespace();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseexpressionWithFunction();
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c15(s1, s5);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseinfixFunctionDefinitionPatternLine() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;

      s0 = peg$currPos;
      s1 = peg$parsewhitespace_newline();
      if (s1 !== peg$FAILED) {
        s2 = peg$parsepattern();
        if (s2 !== peg$FAILED) {
          s3 = peg$parsewhitespace();
          if (s3 === peg$FAILED) {
            s3 = null;
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parseinfixFunctionName();
            if (s4 !== peg$FAILED) {
              s5 = peg$parsewhitespace();
              if (s5 === peg$FAILED) {
                s5 = null;
              }
              if (s5 !== peg$FAILED) {
                s6 = peg$parsepattern();
                if (s6 !== peg$FAILED) {
                  s7 = peg$parsewhitespace();
                  if (s7 === peg$FAILED) {
                    s7 = null;
                  }
                  if (s7 !== peg$FAILED) {
                    if (input.charCodeAt(peg$currPos) === 61) {
                      s8 = peg$c13;
                      peg$currPos++;
                    } else {
                      s8 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c14); }
                    }
                    if (s8 !== peg$FAILED) {
                      s9 = peg$parsewhitespace();
                      if (s9 === peg$FAILED) {
                        s9 = null;
                      }
                      if (s9 !== peg$FAILED) {
                        s10 = peg$parseexpressionWithFunction();
                        if (s10 !== peg$FAILED) {
                          peg$savedPos = s0;
                          s1 = peg$c16(s2, s6, s10);
                          s0 = s1;
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsepatternWithWhitespace() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parsewhitespace();
      if (s1 !== peg$FAILED) {
        s2 = peg$parsepattern();
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c17(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsepattern() {
      var s0, s1, s2, s3, s4, s5;
